--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Django==4.2.6
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-psycopg2==2.9.8
+# psycopg2==2.9.8
+psycopg2-binary==2.9.8
 python-dotenv==1.0.0
 django-phonenumber-field==7.3.0
+phonenumbers==8.13.27
 django-filter==23.5
 twilio==8.9.1
 stripe==7.0.0
-
+dj-database-url==2.1.0
